--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -52,3 +52,33 @@
   background-color: transparent;
   color: #fff;
 }
+
+@media (max-width: 940px) {
+  #navbar h2 a {
+    font-size: 1.4rem;
+  }
+}
+
+@media (max-width: 375px) {
+  #navbar h2 a {
+    font-size: 1rem;
+  }
+  #navbar input {
+    width: 180px;
+  }
+}
+
+@media (max-width: 320px) {
+  #navbar h2 a {
+    font-size: 0.8rem;
+  }
+  #navbar input {
+    width: 140px;
+    height: 30px;
+    align-self: center;
+  }
+  #navbar form button {
+    height: 30px;
+    align-self: center;
+  }
+}
