--- a/src/pages/MoviesGrid.css
+++ b/src/pages/MoviesGrid.css
@@ -2,9 +2,10 @@
 
 .container .title {
   color: #fff;
-  font-size: 2rem;
+  font-size: 3rem;
   text-align: center;
-  margin: 7rem 0 1.5rem;
+  margin: 7rem 0 1rem;
+  font-family: "Parisienne", cursive;
 }
 
 .title .query-text {
