--- a/src/pages/Movie.css
+++ b/src/pages/Movie.css
@@ -113,7 +113,7 @@
     margin-bottom: 10px;
   }
   .description .info {
-    margin-bottom: 10px;
+    margin: 10px;
   }
 }
 
@@ -125,6 +125,7 @@
   }
   .movie-container .movie-card {
     align-items: center;
+    border-radius: 6px 6px 0 0;
   }
   .movie-container .movie-card img {
     max-height: 400px;
@@ -132,6 +133,7 @@
   .description {
     width: auto;
     padding: 2rem;
+    border-radius: 0 0 6px 6px;
   }
   .description .info h3 {
     font-size: 1.1rem;
@@ -149,6 +151,6 @@
     margin-bottom: 10px;
   }
   .description .info {
-    margin-bottom: 10px;
+    margin: 10px 0 25px 0;
   }
 }
